--- a/templates/run.jinja
+++ b/templates/run.jinja
@@ -1,1 +1,1 @@
-{{ model }} --data {{ data }} --lr {{ lr }} --lambda {{ lam }} --emb {{ emb_file }} --nt {{ num_tokens }} --nx {{ emb_dim }} --weight {{ weight }} --dr {{ dr }} --epochs {{ num_epochs }}
+{{ model }} --data {{ data }} --lr {{ lr }} --lambda {{ lam }} --emb {{ emb_file }} --nt {{ num_tokens }} --nx {{ emb_dim }} --weight {{ weight }} --dr {{ dr }} --epochs {{ num_epochs }} --nh {{ nh }} --sig {{ sig }}
